--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,23 @@
+/*
+
+Custom web font integration.
+
+*/
+@font-face {
+  font-family: "Bebas Neue";
+  src: url("fonts/bebasneue-regular.eot") format("embedded-opentype"),
+       url("fonts/bebasneue-regular.woff2") format("woff2"),
+       url("fonts/bebasneue-regular.woff") format("woff"),
+       url("fonts/bebasneue-regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+/*
+
+Base styles.
+
+*/
 body {
   background-color: black;
   font-family: sans-serif;
@@ -39,8 +59,17 @@ a {
 
 h1,
 h2 {
+  font-family: "Bebas Neue";
   color: white;
-  font-weight: 200;
+  font-weight: normal;
+}
+
+h1 {
+  font-size: 4rem;
+}
+
+h2 {
+  font-size: 2rem;
 }
 
 main {
