--- a/stylesheets/site.css
+++ b/stylesheets/site.css
@@ -80,7 +80,7 @@ main {
 }
 
 .header {
-  background-image: url(images/header.jpg);
+  background-image: url(../images/header.jpg);
   background-size: cover;
   min-height: 100vh;
   border-bottom: 1px solid #303030;
