--- a/stylesheets/site.css
+++ b/stylesheets/site.css
@@ -5,10 +5,10 @@ Custom web font integration.
 */
 @font-face {
   font-family: "Bebas Neue";
-  src: url("fonts/bebasneue-regular.eot") format("embedded-opentype"),
-       url("fonts/bebasneue-regular.woff2") format("woff2"),
-       url("fonts/bebasneue-regular.woff") format("woff"),
-       url("fonts/bebasneue-regular.ttf") format("truetype");
+  src: url("../fonts/bebasneue-regular.eot") format("embedded-opentype"),
+       url("../fonts/bebasneue-regular.woff2") format("woff2"),
+       url("../fonts/bebasneue-regular.woff") format("woff"),
+       url("../fonts/bebasneue-regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
