--- a/stylesheets/site.css
+++ b/stylesheets/site.css
@@ -185,6 +185,72 @@ img {
     padding-top: 0.5rem;
 }
 
+/*
+
+    Genealogy section.
+
+ */
+
+.family-tree {
+    padding-bottom: 2rem;
+}
+
+.family-tree .generation {
+    width: 100%;
+    display: flex;
+}
+
+.family-tree .person {
+    flex-grow: 1;
+    text-align: center;
+}
+
+.family-tree .person img {
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+}
+
+.family-tree .person::before {
+    display: block;
+    overflow: hidden;
+    content: "line";
+    color: transparent;
+    height: 1rem;
+    margin-left: 50%;
+    width: 1px;
+    background-color: #2c2c40;
+}
+
+.family-tree .person::after {
+    display: block;
+    overflow: hidden;
+    content: "line";
+    color: transparent;
+    height: 1rem;
+    margin-left: 50%;
+    border-bottom: 1px solid #2c2c40;
+    border-left: 1px solid #2c2c40;
+}
+
+.family-tree .person:nth-child(even)::after {
+    margin-left: 0;
+    margin-right: 50%;
+    border-left: none;
+    border-right: 1px solid #2c2c40;
+}
+
+.family-tree .generation:first-child .person::before,
+.family-tree .generation:last-child .person::after {
+    display: none;
+}
+
+/*
+
+    Section specific to beer.
+
+ */
+
 .beer figure {
     background-color: white;
     color: #2c2c40;
@@ -203,6 +269,12 @@ img {
 .beer img {
     border-radius: 2px;
 }
+
+/*
+
+    Social media and other links.
+
+ */
 
 .icons {
     padding-top: 2rem;
@@ -223,6 +295,12 @@ img {
     width: 4rem;
     height: 4rem;
 }
+
+/*
+
+    Breakpoint for 768px
+
+ */
 
 @media (min-width: 48rem) {
     .header {
@@ -248,7 +326,18 @@ img {
     .header .gutter {
         padding-left: 24rem;
     }
+
+    .family-tree .person img {
+        width: 4rem;
+        height: 4rem;
+    }
 }
+
+/*
+
+    Breakpoint for 960px
+
+ */
 
 @media (min-width: 60rem) {
     .header {
