--- a/stylesheets/site.css
+++ b/stylesheets/site.css
@@ -117,6 +117,11 @@ img {
     max-width: 100%;
 }
 
+noscript {
+    padding: 4rem 1rem;
+    font-weight: bold;
+}
+
 .default-background {
     background-color: black;
 }
