--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -1,36 +1,10 @@
-/*
+@import "normalize";
+@import "fonts";
 
-Custom web font integration.
-
-*/
-@font-face {
-    font-family: "Bebas Neue";
-    src: url("../fonts/bebasneue-regular.eot") format("embedded-opentype"),
-    url("../fonts/bebasneue-regular.woff2") format("woff2"),
-    url("../fonts/bebasneue-regular.woff") format("woff"),
-    url("../fonts/bebasneue-regular.ttf") format("truetype");
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face{
-    font-family: "Fira Sans";
-    src: url("../fonts/FiraSans-Light.eot");
-    src: local("Fira Sans Light"),
-    url("../fonts/FiraSans-Light.eot") format("embedded-opentype"),
-    url("../fonts/FiraSans-Light.woff2") format("woff2"),
-    url("../fonts/FiraSans-Light.woff") format("woff"),
-    url("../fonts/FiraSans-Light.ttf") format("truetype");
-    font-weight: 300;
-    font-style: normal;
-}
-
-@font-face{
-    font-family: "Gloria Hallelujah";
-    src: url("../fonts/GloriaHallelujah.ttf") format("truetype");
-    font-weight: normal;
-    font-style: normal;
-}
+$primary-text-color: #eaeaea;
+$secondary-text-color: #7c7c90;
+$heading-color: white;
+$border-color: #2c2c40;
 
 /*
 
@@ -73,7 +47,7 @@ p {
 
 body,
 a {
-    color: #eaeaea;
+    color: $primary-text-color;
 }
 
 h1,
@@ -85,7 +59,7 @@ h3 {
 
 h2,
 h3 {
-    color: white;
+    color: $heading-color;
 }
 
 h1 {
@@ -101,7 +75,7 @@ h2 {
 h2::after,
 h3::after {
     content: ".";
-    color: #7c7c90;
+    color: $secondary-text-color;
 }
 
 h3 {
@@ -138,7 +112,7 @@ noscript {
 }
 
 .section {
-    border-bottom: 1px solid #2c2c40;
+    border-bottom: 1px solid $border-color;
 }
 
 .header .content-top {
@@ -172,7 +146,7 @@ noscript {
 
 .footer {
     font-size: 80%;
-    color: #7c7c90;
+    color: $secondary-text-color;
     text-align: center;
 }
 
@@ -224,7 +198,7 @@ noscript {
     height: 1rem;
     margin-left: 50%;
     width: 1px;
-    background-color: #2c2c40;
+    background-color: $border-color;
 }
 
 .family-tree .person::after {
@@ -234,15 +208,15 @@ noscript {
     color: transparent;
     height: 1rem;
     margin-left: 50%;
-    border-bottom: 1px solid #2c2c40;
-    border-left: 1px solid #2c2c40;
+    border-bottom: 1px solid $border-color;
+    border-left: 1px solid $border-color;
 }
 
 .family-tree .person:nth-child(even)::after {
     margin-left: 0;
     margin-right: 50%;
     border-left: none;
-    border-right: 1px solid #2c2c40;
+    border-right: 1px solid $border-color;
 }
 
 .family-tree .generation:first-child .person::before,
@@ -296,7 +270,7 @@ noscript {
 
 .book-list .author {
     font-size: small;
-    color: #7c7c90;
+    color: $secondary-text-color;
     padding-left: 1rem;
 }
 
@@ -308,7 +282,7 @@ noscript {
 
 .beer figure {
     background-color: white;
-    color: #2c2c40;
+    color: $border-color;
     font-size: 80%;
     padding: 1rem;
     transform: rotate(4deg);
