--- a/src/stylesheets/fonts.scss
+++ b/src/stylesheets/fonts.scss
@@ -2,22 +2,35 @@
   font-family: "Bebas Neue";
   src: url("fonts/bebasneue-regular.eot") format("embedded-opentype"),
   url("fonts/bebasneue-regular.woff2") format("woff2"),
-  url("fonts/bebasneue-regular.woff") format("woff"),
-  url("fonts/bebasneue-regular.ttf") format("truetype");
+  url("fonts/bebasneue-regular.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
 
+/* latin */
 @font-face{
   font-family: "Fira Sans";
-  src: url("fonts/FiraSans-Light.eot");
+  src: url("fonts/fira-sans.eot");
   src: local("Fira Sans Light"),
-  url("fonts/FiraSans-Light.eot") format("embedded-opentype"),
-  url("fonts/FiraSans-Light.woff2") format("woff2"),
-  url("fonts/FiraSans-Light.woff") format("woff"),
-  url("fonts/FiraSans-Light.ttf") format("truetype");
+  url("fonts/fira-sans.eot") format("embedded-opentype"),
+  url("fonts/fira-sans-light-latin.woff2") format("woff2"),
+  url("fonts/fira-sans-light-latin.woff") format("woff");
   font-weight: 300;
   font-style: normal;
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+/* latin-ext */
+@font-face{
+  font-family: "Fira Sans";
+  src: url("fonts/fira-sans.eot");
+  src: local("Fira Sans Light"),
+  url("fonts/fira-sans.eot") format("embedded-opentype"),
+  url("fonts/fira-sans-light-latin-ext.woff2") format("woff2"),
+  url("fonts/fira-sans-light-latin.woff") format("woff");
+  font-weight: 300;
+  font-style: normal;
+  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 
 @font-face{
