Fixes #23: cover the whole screen while respecting safe area insets.

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -153,6 +153,8 @@ noscript {
 .wrap {
     max-width: 60rem;
     margin: 0 auto;
+    padding-left: env(safe-area-inset-left);
+    padding-right: env(safe-area-inset-right);
 }
 
 .gutter {
