--- a/src/stylesheets/music/page.scss
+++ b/src/stylesheets/music/page.scss
@@ -1,34 +1,36 @@
-.page.music {
-	.header {
-		background-image: url('images/music.jpg');
-		background-repeat: no-repeat;
-		background-size: cover;
-		background-position: 50% 0%;
-		color: white;
-		border-bottom: 1px solid $border-color;
+@media screen {
+	.page.music {
+		.header {
+			background-image: url('images/music.jpg');
+			background-repeat: no-repeat;
+			background-size: cover;
+			background-position: 50% 0%;
+			color: white;
+			border-bottom: 1px solid $border-color;
 
-		h1 {
-			padding-top: 25vh;
+			h1 {
+				padding-top: 25vh;
+			}
+
+			.lead {
+				padding-bottom: 25vh;
+			}
 		}
 
-		.lead {
-			padding-bottom: 25vh;
+		.section.music {
+			background: linear-gradient(to top right, black, #141420);
 		}
-	}
 
-	.section.music {
-		background: linear-gradient(to top right, black, #141420);
-	}
+		@media screen and (min-width: $medium-breakpoint) {
+		    .header {
+		        h1 {
+		        	padding-top: 10rem;
+		        }
 
-	@media (min-width: $medium-breakpoint) {
-	    .header {
-	        h1 {
-	        	padding-top: 10rem;
-	        }
-
-	        .lead {
-	        	padding-bottom: 10rem;
-	        }
-	    }
+		        .lead {
+		        	padding-bottom: 10rem;
+		        }
+		    }
+		}
 	}
 }
